--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,11 @@
 			<groupId>org.codehaus.groovy</groupId>
 			<artifactId>groovy-all</artifactId>
 			<version>2.3.6</version>
-			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.miglayout</groupId>
+			<artifactId>miglayout</artifactId>
+			<version>3.7.4</version>
 		</dependency>
 	</dependencies>
 
