--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,11 @@
 			<artifactId>commons-lang3</artifactId>
 			<version>3.3.2</version>
 		</dependency>
+		<dependency>
+			<groupId>com.outr.javasysmon</groupId>
+			<artifactId>javasysmon_2.10</artifactId>
+			<version>0.3.4</version>
+		</dependency>
 	</dependencies>
 
 	<build>
