--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,13 @@
 			<artifactId>maven-invoker</artifactId>
 			<version>2.1.1</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.spockframework</groupId>
+            <artifactId>spock-core</artifactId>
+            <version>0.7-groovy-2.0</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<finalName>${project.artifactId}</finalName>
