--- a/pom.xml
+++ b/pom.xml
@@ -44,17 +44,21 @@
 			<artifactId>maven-invoker</artifactId>
 			<version>2.1.1</version>
 		</dependency>
+
+        <!-- Test dependencies -->
+
 		<dependency>
 			<groupId>org.spockframework</groupId>
 			<artifactId>spock-core</artifactId>
 			<version>0.7-groovy-2.0</version>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-			<groupId>org.easytesting</groupId>
-			<artifactId>fest-swing</artifactId>
-			<version>1.2.1</version>
-		</dependency>
+        <dependency>
+            <groupId>org.easytesting</groupId>
+            <artifactId>fest-swing</artifactId>
+            <version>1.2.1</version>
+            <scope>test</scope>
+        </dependency>
 	</dependencies>
 
 	<build>
